[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "nopecha-extension"
version = "0.0.1"
description = "A Nopecha Chrome extension ."
readme = "README.md"
authors = [
    { name="4EYES", email="erererer1967@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "chrome_extension_python>=1.0.0"
]


[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["nopecha_extension*"]
